--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              This site created to fullfill Programming for Geographical Information Analysis: Core Skills Module Assesment
          </p> 
          <p>
-             To see my practical's Coding visit this <a href="http://www.big.go.id/"> link </a>
+             To see my practical's Coding visit this <a href="https://github.com/septiandewi/Programming-Core-Skill-Practical.git/"> link </a>
          </p> 
          <p>
              <b>Getting Know ME:</b><br>
