--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
     <head>
             <meta charset="utf-8">
@@ -12,7 +12,12 @@
              This site created to fullfill Programming for Geographical Information Analysis: Core Skills Module Assesment
          </p> 
          <p>
-             To see my practical's Coding visit this <a href="https://github.com/septiandewi/Programming-Core-Skill-Practical.git/"> link </a>
+             To see my practical's Coding visit this <a href="https://github.com/septiandewi/Programming-Core-Skill-Practical.git/"> link </a> in my repository will contain a lot of codes, for the final code i'd rather called it as agentframework_GUI_file.py and agentframework_GUI_file.py <br>
+             My code contain agents based modelling. it will be contained:<br>
+             1. created the agents and their position using existing file that already provided in the website<br>
+             2. created environment for the agents. environment is something that will be surround the agents<br>
+             3. Creating the animation how the agents move, eat, and share food to another agent in their neighbourhood<br>
+             4. Making the user interface to the model so the model can be run using particular button <br>
          </p> 
          <p>
              <b>Getting Know ME:</b><br>
