--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              This site created to fullfill Programming for Geographical Information Analysis: Core Skills Module Assesment
          </p> 
          <p>
-             To see my practical's Codings visit this <a href="https://github.com/septiandewi/Programming-Core-Skill-Practical/tree/add-license-1"> link </a> in my repository will contain a lot of codes, for the final code i'd rather called it as <a href=https://github.com/septiandewi/Programming-Core-Skill-Practical/blob/master/abm/agentframework_GUI_file.py> agentframework_GUI_file.py </a> and <a href=Programming-Core-Skill-Practical/abm/model_GUI_using file_.py> model_GUI_using file_.py </a> <br>
+             To see my practical's Codings visit this <a href="https://github.com/septiandewi/Programming-Core-Skill-Practical/tree/add-license-1"> link </a> in my repository will contain a lot of codes, for the final code i'd rather called it as <a href=https://github.com/septiandewi/Programming-Core-Skill-Practical/blob/master/abm/agentframework_GUI_file.py> agentframework_GUI_file.py </a> and <a href=https://github.com/septiandewi/Programming-Core-Skill-Practical/blob/master/abm/model_GUI_using%20file_.py> model_GUI_using file_.py </a> <br>
              My code contain agents based modelling. it will be contained:<br>
              1. created the agents and their position using existing file that already provided in the website<br>
              2. created environment for the agents. environment is something that will be surround the agents<br>
