--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <h1>Septian's Very First Website</h1>
         <h2><b>Welcome to my Page</b></h2>
          <p>
-             This site created to fullfill Programming for Geographical Information Analysis: Core Skills Module Assesment
+             This site created to present my works in programming and Web GIS coding
          </p> 
+		 <h4>Programming for Geographical Information Analysis: Core Skills Module</h4>
          <p>
              To see my practical's Codings visit this <a href="https://github.com/septiandewi/Programming-Core-Skill-Practical/tree/add-license-1"> link </a> in my repository will contain a lot of codes, for the final code i'd rather called it as <a href=https://github.com/septiandewi/Programming-Core-Skill-Practical/blob/master/abm/agentframework_GUI_file.py> agentframework_GUI_file.py </a> and <a href=https://github.com/septiandewi/Programming-Core-Skill-Practical/blob/master/abm/model_GUI_using%20file_.py> model_GUI_using file_.py </a> <br>
              My code contain agents based modelling. it will be contained:<br>
@@ -19,6 +20,10 @@
              3. Creating the animation how the agents move, eat, and share food to another agent in their neighbourhood<br>
              4. Making the user interface to the model so the model can be run using particular button <br>
          </p> 
+		  <h4>Web GIS Based Module</h4>
+		  <p>
+		  During the pratical i have been created several works. you can see the index of my works <a href="http://dialogplus.leeds.ac.uk/geog5870/web26/index.html"> here </a>
+		  </p>
          <p>
              <b>Getting Know ME:</b><br>
              My Name Is Septian Dewi Cahyani<br>
